@@ -420,6 +420,20 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|schema
+operator|.
+name|SchemaField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|search
 operator|.
 name|DocList
@@ -1584,10 +1598,9 @@ argument_list|(
 name|initAttributes
 argument_list|)
 expr_stmt|;
-name|this
-operator|.
-name|idFieldName
-operator|=
+name|SchemaField
+name|uniqueField
+init|=
 name|core
 operator|.
 name|getSchema
@@ -1595,6 +1608,40 @@ argument_list|()
 operator|.
 name|getUniqueKeyField
 argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|uniqueField
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|CarrotClusteringEngine
+operator|.
+name|class
+operator|.
+name|getSimpleName
+argument_list|()
+operator|+
+literal|" requires the schema to have a uniqueKeyField"
+argument_list|)
+throw|;
+block|}
+name|this
+operator|.
+name|idFieldName
+operator|=
+name|uniqueField
 operator|.
 name|getName
 argument_list|()
